fix: upgrade mockito and allow dynamic agent loading on java 21+